@startuml
skinparam style strictuml


class User{
email
password
name
address
city
zipcode
phone number
balance
role
}
class Order{
price
status
}
class Carport{
carport length
carport width
}

class ToolShed{
toolshed length
toolshed width
}

class Materials{
description
category
unit
length
price
}
class RoofType{
rooftype name
}
class BillofMaterials{
material amount
material guidance

}


User "1" -- "1..*"Order
Order"1" -- "1"BillofMaterials
Order"1" -- "1"Carport
Carport"1" -- "0..1"ToolShed
BillofMaterials"1" -- "1..*"Materials
Carport"1" -- "1"RoofType

@enduml